# dots

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  dprint.json  install.sh  mise.toml
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  commands.md  docker-compose.md  files.md  fonts.md  index.md  install.md  organization.md  outputs.md  packages.md  platforms-and-profiles.md  quick-start.md  release.md  services.md  ssh.md  state.md  symlinks.md  user.md
docs/.vitepress/: config.ts
src/: apply.rs  command.rs  config.rs  docker.rs  font.rs  main.rs  managed_file.rs  managed_output.rs  output.rs  package.rs  plan.rs  platform.rs  project.rs  service.rs  ssh.rs  state.rs  symlink.rs  systemd.rs  user.rs
src/lua/: packages.lua  prelude.lua  services.lua
src/lua/services/: brew.lua  openrc.lua  systemd.lua
tests/: cli.rs
