[package]
name = "dots"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Lua-powered workstation configuration with Terraform-style planning."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored", "error-send"] }
owo-colors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
