[package]
name = "dots"
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "Declarative workstation configuration with Terraform-style planning."
exclude = [".github/", "docs/", "logo.png"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
globset = "0.4"
mlua = { version = "0.10", features = ["lua54", "vendored", "error-send"] }
owo-colors = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
